roles and permissions updates, swagger doc udpate.
