# controllers/job.go
@@ -36,13 +36,6 @@ func (jc *JobController) SetJobRoutes(rg *gin.RouterGroup, config config.Config)
 	r.GET("", middlewares.SetAuthorizationListMiddleware(jc.AuthService, "jobs"), jc.ListJobs)
 	r.GET("/:name", middlewares.AuthorizationMiddleware(jc.AuthService, "jobs", "read"), jc.GetJob)
 	r.GET("/:name/log", middlewares.AuthorizationMiddleware(jc.AuthService, "jobs", "read"), jc.GetJobLog)
-	// r.GET("/:name/schema", middlewares.AuthorizationMiddleware(jc.AuthService, "jobs", "read"), jc.GetSchema)
-
-	// r.Use(middlewares.AuthorizationMiddleware(jc.AuthService, "jobs", "write"))
-	// {
-	// 	r.POST(":name", jc.CreateJob)
-	// 	r.PUT(":name", jc.CreateJob)
-	// }
 
 }
 
@@ -147,78 +140,4 @@ func (jc *JobController) GetJobLog(ctx *gin.Context) {
 	}
 
 	ctx.Data(http.StatusOK, "text/plain", []byte(log))
-}
-
-// // CreateJob godoc
-// //
-// //	@Summary		Create a new job
-// //	@Description	Add a job to the cluster
-// //	@Tags			jobs
-// //	@Accept			json
-// //	@Produce		json
-// //	@Param			name	path		string	true	"Task  name"
-// //	@Param			evars	body		object	false	"Extra vars"
-// //	@Success		200		{object}	models.JobMessage
-// //	@Failure		400		{object}	helpers.HTTPError
-// //	@Failure		404		{object}	helpers.HTTPError
-// //	@Failure		500		{object}	helpers.HTTPError
-// //	@Router			/jobs/{name} [post]
-// //	@Security		Bearer
-// func (jc *JobController) CreateJob(ctx *gin.Context) {
-// 	taskName := ctx.Param("name")
-// 	audit := jc.AuditService.InitialiseAuditLog(ctx, "create", jc.AuditCategory, taskName)
-// 	username := ctx.MustGet("username").(string)
-
-// 	extraVars, err := io.ReadAll(ctx.Request.Body)
-
-// 	if err != nil {
-// 		jc.AuditService.CreateAudit(audit)
-// 		ctx.Error(errors.New("invalid job payload"))
-// 		ctx.Status(http.StatusBadRequest)
-// 		return
-// 	}
-
-// 	job, err := jc.JobService.CreateJob(username, taskName, string(extraVars))
-
-// 	if err != nil {
-// 		jc.AuditService.CreateAudit(audit)
-// 		ctx.Error(err)
-// 		return
-// 	}
-
-// 	audit.Status = "success"
-
-// 	if (job.Name != "") && (job.Completed != 0) {
-// 		jc.AuditService.CreateAudit(audit)
-// 		ctx.JSON(http.StatusOK, job)
-// 		return
-// 	}
-
-// 	jc.AuditService.CreateAudit(audit)
-// 	ctx.JSON(http.StatusOK, models.JobMessage{Message: "job created successfully", JobName: job.Name})
-// }
-
-// GetSchema godoc
-//
-//	@Summary		Get task schema
-//	@Description	Get task schema for the job info and input parameters
-//	@Tags			jobs
-//	@Accept			json
-//	@Produce		json
-//	@Param			name	path		string	true	"Task  name"
-//	@Success		200	{object}	map[string]interface{}
-//	@Failure		404	{object}	helpers.HTTPError
-//	@Failure		500	{object}	helpers.HTTPError
-//	@Router			/cronjobs/{name}/schema [get]
-//	@Security		Bearer
-func (jc *JobController) GetSchema(ctx *gin.Context) {
-	taskName := ctx.Param("name")
-	schema, err := jc.JobService.GetSchema(taskName)
-
-	if err != nil {
-		ctx.Error(err)
-		return
-	}
-
-	ctx.JSON(http.StatusOK, schema)
 }
